# test-cargo-release

./: CHANGELOG.md  Cargo.toml
.github/workflows/: release.yml
src/: main.rs
